# blinberi-review-admin

./: .gitignore  TODO.md  index.html  package-lock.json  package.json  pyproject.toml
bra_backend/: manage.py
bra_backend/bra_backend/: asgi.py  settings.py  urls.py  wsgi.py
bra_backend/reviewapi/: admin.py  api.py  filter_schemas.py  logic.py  megaactions.py  models.py  schemas.py
bra_backend/reviewapi/migrations/: 0001_initial.py  0002_alter_review_rating.py  0003_city_brand_active_on_rank_location_active_on_rank_and_more.py  0004_alter_location_city.py
bra_backend/reviewapi/templates/: load_new_review_detail.html
src/: App.svelte  interfaces.ts
src/components/: ChartManager.ts  CityRatingList.svelte  LocationRatingList.svelte  MonthRatingChart.svelte  QualityIndex.svelte  QualityIndexWithLoad.svelte  RatingList.svelte  RatingListWithFilter.svelte  ReviewRatingList.svelte  ReviewStrip.svelte  ReviewStripIf.ts  TopFive.svelte  TopFiveBrands.svelte  TopFiveLocations.svelte
src/pages/: BrandPage.svelte  CityPage.svelte  MainPage.svelte  style.css
src/pages/BrandCityPage/: BrandCityPage.svelte  BrandCityPageViewManager.ts
src/pages/BrandPage/: BrandPage.svelte  BrandPageViewManager.ts
src/pages/CityPage/: CityPage.svelte
src/pages/LocationPage/: LocationPage.svelte  LocationPageViewManager.ts
src/pages/MainPage/: MainPage.svelte
src/routes/: index.svelte
src/routes/brand/: [brand-id].svelte  [brand].svelte
src/routes/location/: [loc].svelte
